...

        var accessibilityIdentifier: String {
            switch self {
            case .team:
                return "main_tab_team"
            case .tournament:
                return "main_tab_tournament"
            case .schedule:
                return "main_tab_schedule"
            case .message:
                return "main_tab_message"
            case .my:
                return "main_tab_my"
            }
        }
    }

    let store: AppStore
    @State private var selectedTab: MainTab = .team
...
